steam profile link

--- a/src/components/home/Links.astro
+++ b/src/components/home/Links.astro
@@ -28,7 +28,7 @@ import { SiMyanimelist, SiLetterboxd, SiSteam } from "react-icons/si";
   <SiLetterboxd />
   <span class="sr-only">Letterboxd Profile Link</span>
 </a>
-<a target="_blank" href="https://letterboxd.com/SamIsTheFBI" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
+<a target="_blank" href="https://steamcommunity.com/id/samisthefbi" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <SiSteam />
   <span class="sr-only">Steam Profile Link</span>
 </a>
