--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Base from "@/layouts/Base.astro"
 import ProjectCard from "@/components/ProjectCard.astro"
-import { CiLocationOn, CiAt } from "react-icons/ci"
+import { CiLocationOn, CiChat1 } from "react-icons/ci"
 
 import Munsoc from "@/assets/munsoc.png"
 import Watchmenu from "@/assets/watchmenu.png"
@@ -24,9 +24,8 @@ const title = "Home | SamIsTheFBI"
         <CiLocationOn size={20}/>{" "}Jharkhand, India
       </p>
       <div class="flex gap-2 items-center">
-        <CiAt size={20}/>
+        <CiChat1 size={20}/>
         <p>
-          <a href="https://linkedin.com/in/shivam-shekhar-soy" target="_blank" class="link font-normal">LinkedIn</a>, 
           <a href="https://x.com/samisthefbi" target="_blank" class="link font-normal">Twitter/X</a>,
           <a href="mailto:shivamshekharsoy@gmail.com" target="_blank" class="link font-normal">Email</a>
         </p>
