--- a/src/pages/uses/index.astro
+++ b/src/pages/uses/index.astro
@@ -26,8 +26,8 @@ const title = "Uses | SamIsTheFBI"
           I finally got a 5G supported smartphone. Just like my older <a href="https://www.amazon.in/Redmi-Display-Storage-4000mAH-Battery/dp/B07QMSBC8D" class="link">Redmi 7</a>, I use it for phone calls, UPI payments & college stuff, along with playing any multiplayer game my friends are into.
         </li>
         <li>
-          <b>IEMs</b>: <a href="https://conceptkart.com/products/kz-edx-pro-wired-iem?variant=39421778788426" class="link">KZ EDX Pro</a> and <a class="link" href="https://conceptkart.com/products/kz-castor-pro-dual-dynamic-driver-iem?variant=41749015920714">KZ Castor</a> <span class="text-sm text-muted-foreground">(Gray Improved Bass variant)</span><br />
-          I own two IEMs. I got the former when my 5 years old Mi Basic earphones died on me, and the latter I got from a giveaway by YouTuber <a class="link font-medium no-underline" href="https://www.youtube.com/@TheHopelessGeek">TheHopelessGeek</a>. They sound great, Castor has a more bass-y feel to it and the EDX Pro feels much more balanced to me.
+          <b>IEMs</b>: <a class="link" href="https://conceptkart.com/products/kz-castor-pro-dual-dynamic-driver-iem?variant=41749015920714">KZ Castor</a> <span class="text-sm text-muted-foreground">(Gray Improved Bass variant)</span><br />
+          I got this from a giveaway by YouTuber <a class="link font-medium no-underline" href="https://www.youtube.com/@TheHopelessGeek">TheHopelessGeek</a>. They sound great, Castor has a more bass-y feel to it and the EDX Pro (my previous ones which I gave to my brother) feels much more balanced to me.
         </li>
         <li>
           <b>Keyboard</b>: <a href="https://aulaindia.com/product/aula-f75-wireless-trio-mode-mechanical-gaming-keyboard-with-knob-ice-blue-reaper-switch-keyboard-f75iur/" class="link">Aula F75</a> <span class="text-sm text-muted-foreground">(Ice Blue variant with Leobog Reaper switches)</span><br />
