--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const title = "Home | SamIsTheFBI"
       I'm a 22yo CS undergrad. My interests lie in <span class="font-semibold">web development, UNIX-like systems, shell scripting</span> and <span class="font-semibold">drawing</span>.
     </p>
     <p>
-      Beyond my studies, I enjoy participating in hackathons and working on various projects. In my free time, I also like tweaking my linux, watching movies, or playing video games.
+      Beyond my studies, I enjoy participating in hackathons, working on various projects and ricing Linux. Aside from that, I do a little bit of sketching, watching movies, and playing video games.
     </p>
   </section>
   <section class="mt-8 space-y-4">
