smaller font size

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -13,11 +13,11 @@ const title = "About | SamIsTheFBI"
     <h1 class="text-3xl sm:text-4xl font-semibold tracking-tighter text-pretty">
       I&apos;m <span transition:name="my_name">Shivam Shekhar Soy</span>. I&apos;m a programmer & artist.
     </h1>
-    <p class="text-pretty">
+    <p class="text-sm">
       Or at least that's what I'm telling people now. There are a lot of things I am interested in. I excel in some, others I just can't stop obsessing over and only hoping to be good at!
     </p>
     <h2 class="text-xl sm:text-2xl font-semibold tracking-tighter opacity-95">Computers & me</h2>
-    <p class="">
+    <p class="text-sm">
       I have been using computers since I was a 3rd grader when my father bought one for his office work. If I look back now, I spent more time playing video games on a 
       computer rather than doing something productive. But it wasn't until around grade 7 that I took a major step towards programming. I had made my first hello world program
       in C++, learned a lot of HTML & CSS, and made a boring maze game with GameMaker Studio. Although, I wasn't only programming when I wasn't playing video games. For some time, 
@@ -25,7 +25,7 @@ const title = "About | SamIsTheFBI"
       stuff I had never seen before. By 9th grade, I had distro-hopped many Debian-based Linux distributions. Fast forward to now, I'm actually deep diving into programming realm.
     </p>
     <h2 class="text-xl sm:text-2xl font-semibold tracking-tighter opacity-95">The Art Block</h2>
-    <p class="">
+    <p class="text-sm">
       Apart from technology, I also love drawing. Or atleast I used to. Since childhood I have found drawing to be one of my favorite pastimes. My drawing books were actually full
       and I was once actually interested in the art class during my school time. I can't remember when I became fond of it. But the cartoons I used to watch, comic books I used
       to read and games I used to play as a kid fuelled this passion of mine. I had drawing copies filled with drawings of Ben 10 aliens, Avatar The Last Airbender, 
@@ -35,7 +35,7 @@ const title = "About | SamIsTheFBI"
       Made an Instagram account just for posting my art. I was regular at it and my digital art skills were okay enough. And then I'd stop with all this for a stupid exam. It's truly
       hard to go back to how I was back then. But I know I will be back at it again. I just need to push through.
     </p>
-    <p>
+    <p class="text-sm">
       All that aside, I do spend my remaining time with friends doing normal things, like a normal person. At first glance I may not look like the kind but I do enjoy movies, music, 
       anime, and some books. I won’t try to bring that up in a conversation unless someone genuinely asks me to. I will update this site with my recommendation list someday. If you read 
       this much, thank you for visiting this corner of internet.
