--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ const title = "Home | SamIsTheFBI"
       </div>
     </div>
     <p class="text-sm text-pretty">
-I'm a 22yo CS undergrad. My interests lie in web dev, UNIX-like systems and shell scripting. Beyond my studies, I enjoy participating in hackathons, working on various projects and ricing Linux. Aside from that, I do a little bit of sketching, watching movies, and playing video games.
+      I'm a 22yo CS undergrad. My interests lie in web dev, UNIX-like systems and shell scripting. Aside from that, I do a little bit of sketching, watching movies, and playing video games.
     </p>
   </section>
   <section class="mt-8 space-y-4">
